--- a/colab.ipynb
+++ b/colab.ipynb
@@ -32,7 +32,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@title cek gpu\n",
+        "#@title ce gp\n",
         "\n",
         "! nvidia-smi"
       ],
@@ -46,16 +46,16 @@
         "cellView": "form"
       },
       "source": [
-        "#@title **LANGSUNG AJALAH**\n",
+        "#@title **LANSUNG JAAH**\n",
         "\n",
-        "import random, string, urllib.request, json, getpass\n",
+        "im\n",
         " \n",
-        "#Let's Go!!!\n",
-        "! #@title GASKEUNMAMANG",
-        "! wget https://raw.githubusercontent.com/jayaabadiindo/solid-eureka/main/gas.sh\n",
-        "! chmod u+x gas.sh\n",
+        "#Les G!!!\n",
+        "! #@title GAKEMANG",
+        "! wg\n",
+        "! ch\n",
         " \n",
-        "get_ipython().system_raw('./gas.sh')\n",
+        "get\n",
         " \n",
       ],
       "execution_count": null,
